SPCTR-1703 - Fix: Call to Action - Text not wrapping on smaller devices.

--- a/src/blocks/call-to-action/style.scss
+++ b/src/blocks/call-to-action/style.scss
@@ -31,6 +31,7 @@
 	align-items: center;
 	width: max-content;
 	word-break: keep-all;
+	width: 100%;
 }
 
 .uagb-cta__title {
